--- a/css/variants/black.css
+++ b/css/variants/black.css
@@ -1033,19 +1033,26 @@
     background: #000; }
   body:not(.feature_new_message_markup) .msgs_holder .unread_divider {
     color: #e6e6e6; }
+    body:not(.feature_new_message_markup) .msgs_holder .unread_divider span.divider_label {
+      background: #bf360c;
+      padding: 3px; }
     body:not(.feature_new_message_markup) .msgs_holder .unread_divider.no_unreads {
       color: #e6e6e6; }
+      body:not(.feature_new_message_markup) .msgs_holder .unread_divider.no_unreads span.divider_label {
+        background: #545454; }
       body:not(.feature_new_message_markup) .msgs_holder .unread_divider.no_unreads hr {
         border-top: 1px solid #363636; }
     body:not(.feature_new_message_markup) .msgs_holder .unread_divider hr {
       border-top: 1px solid #bf360c; }
 
-  .msgs_holder .unread_divider span.divider_label {
-    background: #bf360c;
-    border-radius: 3px;
-    padding: 3px; }
-  .msgs_holder .unread_divider.no_unreads span.divider_label {
-    background: #545454; }
+  .msgs_holder .unread_divider {
+    color: #e6e6e6; }
+    .msgs_holder .unread_divider span.divider_label {
+      background: #bf360c;
+      border-radius: 3px;
+      padding: 3px; }
+    .msgs_holder .unread_divider.no_unreads span.divider_label {
+      background: #545454; }
   .msgs_holder .message.automated_grey {
     background: #000; }
     .msgs_holder .message.automated_grey .timestamp {
@@ -1281,11 +1288,98 @@
   .inline_attachment iframe {
     background-color: #000; }
 
+  .meta.msg_inline_file_preview_toggler, .meta.msg_inline_img_toggler,
+  .dense_meta.msg_inline_file_preview_toggler,
+  .dense_meta.msg_inline_img_toggler {
+    color: #949494 !important; }
+    .meta.msg_inline_file_preview_toggler a[data-file-id], .meta.msg_inline_img_toggler a[data-file-id],
+    .dense_meta.msg_inline_file_preview_toggler a[data-file-id],
+    .dense_meta.msg_inline_img_toggler a[data-file-id] {
+      color: #949494 !important; }
+    .meta.msg_inline_file_preview_toggler:hover, .meta.msg_inline_img_toggler:hover,
+    .dense_meta.msg_inline_file_preview_toggler:hover,
+    .dense_meta.msg_inline_img_toggler:hover {
+      color: #c7c7c7 !important; }
+      .meta.msg_inline_file_preview_toggler:hover a[data-file-id], .meta.msg_inline_img_toggler:hover a[data-file-id],
+      .dense_meta.msg_inline_file_preview_toggler:hover a[data-file-id],
+      .dense_meta.msg_inline_img_toggler:hover a[data-file-id] {
+        color: #c7c7c7 !important; }
+    .meta.msg_inline_file_preview_toggler .msg_inline_file_preview_title, .meta.msg_inline_img_toggler .msg_inline_file_preview_title,
+    .dense_meta.msg_inline_file_preview_toggler .msg_inline_file_preview_title,
+    .dense_meta.msg_inline_img_toggler .msg_inline_file_preview_title {
+      color: #e6e6e6; }
+      .meta.msg_inline_file_preview_toggler .msg_inline_file_preview_title:hover, .meta.msg_inline_img_toggler .msg_inline_file_preview_title:hover,
+      .dense_meta.msg_inline_file_preview_toggler .msg_inline_file_preview_title:hover,
+      .dense_meta.msg_inline_img_toggler .msg_inline_file_preview_title:hover {
+        color: #949494; }
+    .meta.msg_inline_file_preview_toggler .ts_icon[class*=ts_icon_caret]:hover, .meta.msg_inline_img_toggler .ts_icon[class*=ts_icon_caret]:hover,
+    .dense_meta.msg_inline_file_preview_toggler .ts_icon[class*=ts_icon_caret]:hover,
+    .dense_meta.msg_inline_img_toggler .ts_icon[class*=ts_icon_caret]:hover {
+      color: #c7c7c7; }
+  .meta.meta_feature_fix_files .file_new_window_link:hover,
+  .dense_meta.meta_feature_fix_files .file_new_window_link:hover {
+    color: #c7c7c7 !important; }
+    .meta.meta_feature_fix_files .file_new_window_link:hover .file_inline_icon,
+    .dense_meta.meta_feature_fix_files .file_new_window_link:hover .file_inline_icon {
+      color: #c7c7c7 !important; }
+  .meta.meta_feature_fix_files .member,
+  .dense_meta.meta_feature_fix_files .member {
+    color: #949494 !important; }
+
   .delete_attachment_link {
     color: #949494; }
 
   .delete_attachment_link:hover {
     color: #c7c7c7; }
+
+  .file_container:after {
+    background-image: -webkit-linear-gradient(top, transparent 0, #000 100%);
+    background-image: -moz-linear-gradient(top, transparent 0, #000 100%);
+    background-image: -o-linear-gradient(top, transparent 0, #000 100%);
+    background-image: linear-gradient(top, transparent 0, #000 100%); }
+  .file_container .file_header .file_header_meta {
+    color: #949494; }
+  .file_container .file_header + .file_body {
+    border-top: 1px solid #000; }
+  .file_container .preview_actions .btn {
+    background-color: #363636; }
+    .file_container .preview_actions .btn:after {
+      border-color: #000; }
+    .file_container .preview_actions .btn.preview_show_less_header {
+      background-color: #222;
+      color: #949494 !important; }
+      .file_container .preview_actions .btn.preview_show_less_header:after {
+        border: 2px solid #000; }
+      .file_container .preview_actions .btn.preview_show_less_header:focus, .file_container .preview_actions .btn.preview_show_less_header:hover {
+        background-color: #363636; }
+        .file_container .preview_actions .btn.preview_show_less_header:focus:after, .file_container .preview_actions .btn.preview_show_less_header:hover:after {
+          border-color: #363636; }
+  .file_container.image_container .preview_actions .btn {
+    background-color: rgba(130, 130, 130, 0.9); }
+    .file_container.image_container .preview_actions .btn:focus, .file_container.image_container .preview_actions .btn:hover {
+      background-color: #363636; }
+  .file_container.image_container .preview_actions.overflow_preview_actions {
+    background: rgba(130, 130, 130, 0.9);
+    border: 1px solid rgba(0, 0, 0, 0.1); }
+  .file_container .preview_show .preview_show_btn {
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), linear-gradient(rgba(130, 130, 130, 0.3), rgba(130, 130, 130, 0.3));
+    color: #949494; }
+
+  .msg_inline_video_buttons_div {
+    background-color: rgba(34, 34, 34, 0.4); }
+    .msg_inline_video_buttons_div a {
+      color: #e6e6e6;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+      .msg_inline_video_buttons_div a:visited {
+        color: #e6e6e6;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+
+  body:not(.feature_new_message_markup) .meta.msg_inline_file_preview_toggler a,
+  body:not(.feature_new_message_markup) .meta.msg_inline_file_preview_toggler .member,
+  body:not(.feature_new_message_markup) .meta.msg_inline_file_preview_toggler .service_link, body:not(.feature_new_message_markup) .meta.msg_inline_img_toggler a,
+  body:not(.feature_new_message_markup) .meta.msg_inline_img_toggler .member,
+  body:not(.feature_new_message_markup) .meta.msg_inline_img_toggler .service_link {
+    color: #949494 !important; }
 
   pre {
     background: #000;
@@ -1311,10 +1405,20 @@
   .file_list_item.snippet .snippet_preview {
     background: #000; }
 
-  .snippet_preview {
+  .snippet_preview,
+  .snippet_body {
     background: #000; }
-    .snippet_preview pre {
+    .snippet_preview pre,
+    .snippet_body pre {
       color: #e6e6e6; }
+
+  .file_container .CodeMirror .CodeMirror-code > div:before,
+  .file_container .CodeMirror .sssh-line:before,
+  .file_container .sssh-code .CodeMirror-code > div:before,
+  .file_container .sssh-code .sssh-line:before {
+    background-color: #363636;
+    border-right: 1px solid #363636;
+    color: #949494; }
 
   .CodeMirror {
     background: #000;
@@ -1780,7 +1884,7 @@
     html.no_touch a.filetype_button_web:hover .file_title {
       color: #e6e6e6; }
 
-  .file_meta {
+  .file_container ~ .file_meta {
     color: #949494; }
 
   .file_inline_icon {
@@ -2116,13 +2220,6 @@
   #lightbox_dialog.modal .lightbox_image {
     background: #000;
     box-shadow: 0 1px 15px rgba(0, 0, 0, 0.5); }
-  #lightbox_dialog.modal .close {
-    background: #222;
-    border: 2px solid #828282;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    color: #e6e6e6; }
-    #lightbox_dialog.modal .close:hover {
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5); }
   #lightbox_dialog.modal .icon_new_window {
     color: rgba(230, 230, 230, 0.5) !important; }
   #lightbox_dialog.modal .lightbox_meta {
@@ -2142,6 +2239,22 @@
   #lightbox_dialog.modal.loading {
     background: rgba(0, 0, 0, 0.5);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); }
+  #lightbox_dialog.modal .close {
+    background: #222;
+    border: 2px solid #828282;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    color: #e6e6e6; }
+    #lightbox_dialog.modal .close:hover {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5); }
+  #lightbox_dialog.modal .lightbox_nav {
+    background: #222;
+    border: 3px solid #828282;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+    color: #e6e6e6;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
+    #lightbox_dialog.modal .lightbox_nav:not(.faded):hover {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5); }
 
   #new_prefs_dialog {
     background: #424242; }
@@ -2151,14 +2264,14 @@
       background: padding-box #545454;
       border-right: 1px solid #222; }
       #new_prefs_dialog .modal-nav a {
-        color: #949494;
+        color: #e6e6e6;
         text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
         #new_prefs_dialog .modal-nav a:hover {
           background: #828282;
-          color: #949494; }
+          color: #e6e6e6; }
         #new_prefs_dialog .modal-nav a.active {
           background: #424242;
-          color: #949494;
+          color: #e6e6e6;
           text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
 
   #debug_prefs_dialog {
@@ -2214,7 +2327,13 @@
     background: #545454; }
   .ts_tip .ts_tip_tip {
     color: #e6e6e6; }
-  .ts_tip.ts_tip_left .ts_tip_tip:after, .ts_tip.ts_tip_right .ts_tip_tip:after, .ts_tip.ts_tip_top .ts_tip_tip:after, .ts_tip.ts_tip_bottom .ts_tip_tip:after {
+  .ts_tip.ts_tip_left .ts_tip_tip:after {
+    border-left-color: #545454; }
+  .ts_tip.ts_tip_right .ts_tip_tip:after {
+    border-right-color: #545454; }
+  .ts_tip.ts_tip_top .ts_tip_tip:after {
+    border-top-color: #545454; }
+  .ts_tip.ts_tip_bottom .ts_tip_tip:after {
     border-bottom-color: #545454; }
 
   .ts_toggle .ts_toggle_button {
